--- a/src/components/StudentMainPage.css
+++ b/src/components/StudentMainPage.css
@@ -18,7 +18,7 @@
 	font-weight: bold;
 	font-size: 180%;
 }
-.normal_details {
+.student_details {
 	/* padding-left: 20px; */
 	line-height: 1.6;
 	/* font-weight: light; */
